--- a/styles/main.scss
+++ b/styles/main.scss
@@ -185,6 +185,11 @@
   border: none;
   cursor: pointer;
 }
+
+.fl-right{
+  float: right;
+}
+
 .div-btn-custom{
   background-color: rgb(6, 150, 172)!important;
   color: white;
