--- a/styles/main.scss
+++ b/styles/main.scss
@@ -145,6 +145,15 @@
   border: none;
   cursor: pointer;
 }
+.btn-custom-small{
+  background-color: rgb(6, 150, 172)!important;
+  color: white;
+  padding: 3px 15px 3px 15px;
+  border-radius: 15px;
+  border: none;
+  cursor: pointer;
+}
+
 .btn-custom{
   background-color: rgb(6, 150, 172)!important;
   color: white;
